Mon May  5 18:10:37 1997  larry.jones@sdrc.com
	and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Change all /tmp/cvs-sanity to TESTDIR.  If TESTDIR
	environment variable is set, use it instead of /tmp/cvs-sanity.
	* sanity.sh: Make TMPPWD the pwd equivalent of TESTDIR, not of /tmp.

4 May 1997  Larry jones  <larry.jones@sdrc.com>
	    and Jim Kingdon

	* checkout.c, diff.c, patch.c, rcs.c: Update usage messages.
	* rcs.c (annotate): Add -R like other things with -l.

Sat May  3 14:57:40 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basic1): Rewrite test (use dotest, unroll the loops
	which IMHO makes the test a zillion times more understandable, and
	only do the variant which tests for 4 files at a time--we test one
	file at a time lots of places).

2 May 1997  Ziv Gigus <ziv@rest.home.net>
	    and Jim Kingdon

	* client.c, client.h (client_process_import_file): New argument
	all_files_binary means treat all files as binary.
	* import.c (import_descend): Pass it if -kb is specified.
	* client.c (client_process_import_file): In the
	non-all_files_binary case, call wrap_rcsoption to determine
	whether the file is binary.

Thu May  1 13:44:51 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (binfiles2): New tests, for update -j and binary files.

Wed Apr 30 11:18:36 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* recurse.c (start_recursion): Also free reposfile.
	Don't look in repository if client_active (latter bug reported by Paul
	Sanders <p.sanders@dial.pipex.com>).

Mon Apr 28 22:36:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* diff.c (diff_file_nodiff): Remove SERVER_SUPPORT ifdefs.  They
	were not based on server_active, which doesn't really make any
	sense (it meant that compiling --disable-server could affect the
	behavior of the non-client/server CVS).  This affected the output
	in tests death2-diff-11 and death2-diff-12 in the testsuite.
	* sanity.sh (newb-123j0): Also accept "Needs Checkout", for a