@@ -1,3 +1,9 @@
+Tue May  6 14:20:00 1997  Larry Jones  <larry.jones@sdrc.com>
+
+	* edit.c (watch_onoff, edit, unedit, editors): Add -R like
+	other things with -l.
+	* watch.c (watch_addremove, watchers): Ditto.
+
 Mon May  5 18:10:37 1997  larry.jones@sdrc.com
 	and Jim Kingdon  <kingdon@harvey.cyclic.com>
 
